<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_python"
            android:icon="@drawable/ic_python"
            android:title="@string/menu_python" />
        <item
            android:id="@+id/nav_quiz"
            android:icon="@drawable/ic_quiz"
            android:title="Quiz" />
        <item
            android:id="@+id/nav_event"
            android:icon="@drawable/ic_event"
            android:title="@string/event" />
    </group>
    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_about"
                android:title="Logout" />

        </menu>
    </item>
</menu>